syntax = "proto3";
package Message;
import "Code.proto";
import "Common.proto";

// tcp
message OutRequest {
  uint32 opcode = 1; // rpc opcode
  uint32 sn = 2;     //流水号-用于断线重连
  bytes content = 3; //消息内容
  string sign = 4;   //签名-校验有效性
}

// tcp
message OutResponse {
  uint32 opcode = 1; // rpc opcode
  uint32 sn = 2;     //流水号--用于断线重连
  bytes content = 3; //消息内容
  string sign = 4;   //签名-校验有效性
  Code code = 5;     //消息错误码
}

// http
message ApiResult {
  Code code = 1;     //消息错误码
  string msg = 2;    // 有错误情况, 可选的错误消息
  bytes content = 3; //消息内容
}

message C2G_Ping // IRequest
{}
message G2C_Pong // IResponse
{}

message C2M_Reload // IRequest
{
  string account = 1;
  string password = 2;
}

message M2C_Reload // IResponse
{}